--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </a></li>
 
             <li><a href="https://www.threads.net/tag/Treeds "target="_blank ">
-                <img src="assets/threades.png" alt="Logo_treds" id="treds">
+                <img src="assets/threades.png" alt="Logo_tredsd" id="treds">
             </a></li>
 
             <li><a href="https://www.instagram.com/" target="_blank ">
