--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#"><img src="assets/logo.png" alt="logo da empresa" class="logo"></a>
             
             <!-- div menu hamburguer -->
-            <div class="toggle" onclick="toggleMenu();"></div>
+            <div class="toggle" onclick="ToggleMenu();"></div>
 
             <!-- links -->
             <ul class="links">
@@ -73,6 +73,7 @@
             </a></li>
         </ul>
     </main>
+    <script src="mudar.js"></script>
 </body>
 
 </html>
